@@ -1417,11 +1417,11 @@ char *ping = (char *) &pingpkt;
    icmplen = 20;
    memset(datastart, 0, 12);
    datastart += 12;
-   datalen -= 12;
+   //datalen -= 12;
  } else if (ptype == 17 && pcode == 0) /* icmp netmask req */ {
    icmplen = 12;
    *datastart++ = 0;
-   datalen -= 4;
+   //datalen -= 4;
  } else 
    fatal("Unknown icmp type/code (%d/%d) in build_icmp_raw", ptype, pcode);
 
